     * qt: Use Qt's built-in mechanism (like before this release)
     * libnotify: Use a libnotify-compatible notification server (i.e. native
       notifications on Linux)
     * systray: Use a systray icon (very similar to `qt` but without some of its
       drawbacks)
     * messages: Use qutebrowser messages
     * herbe: Use https://github.com/dudik/herbe[herbe]

Changed
~~~~~~~

- The `content.ssl_strict` setting got renamed to
  `content.tls.certificate_errors`, with new values:
  * `ask`: Prompt on overridable certificate errors (`ssl_strict = 'ask'`)
  * `ask-block-thirdparty`: See below
  * `block`: Block the page load (`ssl_strict = True`)
  * `load-insecurely`: Load the page despite the error (`ssl_strict = False`)
- The new `content.tls.certificate_errors` setting now also understands the
  value `ask-block-thirdparty`, which asks for page loads but automatically blocks
  resource loads on TLS errors. This behavior is consistent with what other
  browsers do.
- The prompt text shown on certificate errors has been improved to make it
  clearer what kind of error occurred exactly.
- The `content.site_specific_quirks` setting got renamed to
  `content.site_specific_quirks.enabled`.
- The `content.notifications` option got renamed to
  `content.notifications.enabled`.
- The completion now also shows bindings starting with `set-cmd-text` in its
  third column, such as `o` for `:open`.
- When `:spawn` is used with the `-m` / `--output-messages` flag, the output now
  appears live, while the process is running.
- When a shown message replaces an existing related one (e.g. for zoom levels),
  the replacing now also works even if a different message was shown in between.
- The `.redirect(...)` method on interceptors now supports an
  `ignore_unsupported=True` argument which supresses exceptions if a request could
  not be redirected. Note, however, that it is still not public API.
- When the `--config-py` argument is used, no warning about a missing